--- a/README.org
+++ b/README.org
@@ -6,8 +6,10 @@ unsigned char values, one at a time.
 *** Compiling and running
 
 #+BEGIN_SRC
-$ gcc -o benchmark-fwrite-fputc benchmark.c 
-$ ./benchmark-fwrite-fputc 
-fwrite time: 30.465202
-fputc time: 0.228985 
+$ gcc -o fwrite-vs-fputc benchmark.c
+$ ./fwrite-vs-fputc 
+fwrite time write all at once:	 0.011099
+fwrite time one byte at a time:	 0.513641
+fwrite time one byte at a time:	 30.635445
+fputc time one byte at a time:	 0.235022
 #+END_SRC
